# vdesk

./: Cargo.toml
src/: app.rs  config.rs  desktop.rs  events.rs  hotkeys.rs  main.rs  startup.rs
