[package]
name = "vdesk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tray-item = "0.10"
winreg = "0.52"
winvd = "0.0.49"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
